--- a/src/Components/Progress_Tracker/progress.css
+++ b/src/Components/Progress_Tracker/progress.css
@@ -277,6 +277,18 @@
   font-weight: bold;
   background-color: rgb(0, 81, 128);
   color: #fff;
+  animation: blish-and-appear 1s ease-in-out;
+}
+@keyframes blish-and-appear {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 
