--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,18 @@ body{
   background-image: linear-gradient(180deg, rgba(233, 245, 255, 0.651), rgba(147, 231, 210, 0.192)), url("/educa_pic_2.png");
   background-size: 250px;
   background-repeat: repeat;
-  min-height: 100vh;
+  height: 100%;
   width: 100%;
 }
 
+.page-wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.stretch-section-content {
+  flex-grow: 1;
+}
 .no-scroll {
   overflow: hidden;
 }
@@ -1155,6 +1163,12 @@ hr.divider{
   box-shadow: inset 2px 2px 2px silver;
 }
 
+   .cours-podcasts-holder {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  gap: 2em;
+}
+
 .podcast-semesters-options {
   margin-top: 2em;
   display: flex;
@@ -1171,12 +1185,6 @@ hr.divider{
   padding: 0.5em;
 }
 
-.cours-podcasts-holder {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 2em;
-}
 .cours-podcast {
   background-image: linear-gradient(to left, rgba(128, 0, 128, 0.123), #cccccc52, rgba(147, 232, 243, 0.822)), url("/stars.png");
   padding: 0.5em;
@@ -1395,7 +1403,7 @@ footer{
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 0.3em;
-  margin-top: 4.8em;
+  margin-top: 2em;
   background-color: rgba(249, 253, 253, 0.233);
   backdrop-filter: blur(2px);
   -webkit-backdrop-filter: blur(2px);
@@ -1611,15 +1619,6 @@ footer{
 }
 /* ============================ */
 /* ============================ */
-
-@media screen and (min-width: 768px) {
-  .welcome-footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-  }
-}
 
 @media screen and (min-width: 694px) and (max-width: 994px){
   .guide-msg{
